# C-Web-Socket

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
include/WebInterface/: algValidator.h  http_session.h  jsonWriter.h  listener.h  message.h  messageValidator.h  net.h  receivedMsg.h  server_certificate.hpp  session.h  shared_state.h  verifyObj.h  webInterface.h  websocket_session.h
src/: CMakeLists.txt
src/WebInterface/: CMakeLists.txt
src/WebInterface/cpp/: algValidator.cpp  http_session.cpp  jsonWriter.cpp  listener.cpp  main.cpp  message.cpp  messageValidator.cpp  session.cpp  shared_state.cpp  webInterface.cpp  websocket_session.cpp
